# ik_satisficer

./: .gitignore  Cargo.toml  bacon.toml  flake.nix
ik2/: Cargo.toml
ik2/src/: lib.rs  main.rs
ik3/: .Cargo.toml.kate-swp  Cargo.toml
ik3/src/: lib.rs
ik3/src/fk/: mod.rs
ik_satisficer/src/: lib.rs
src/: lib.rs
visualizer/: Cargo.toml
visualizer/src/: main.rs
