[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
# ik_satisficer = { path = "../ik_satisficer" }
ik2 = { path = "../ik2" }
itertools = "0.11.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
