[package]
name = "visualizer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.3"
bevy_egui = "0.22.0"
bevy_mod_picking = "0.15.0"
# bevy_transform_gizmo = "0.8.0"
bevy_transform_gizmo = { git = "https://github.com/Exobody/bevy_transform_gizmo.git" }
egui = "0.23.0"
egui_plot = "0.23.0"
# ik_satisficer = { path = "../ik_satisficer" }
# ik2 = { path = "../ik2" }
ik3 = { path = "../ik3" }
itertools = "0.11.0"

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
